--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
   </head>
   <body>
     <header>
-      <h1>本地音乐播放器 · 隐私政策</h1>
-      <p>最后更新：2025-11-18</p>
+      <h1>Privacy Policy</h1>
+      <p>Last update: 2025-11-18</p>
     </header>
     <main>
       <section>
-        <h2>1. 产品简介</h2>
+        <h2>1. This Privacy Policy describes</h2>
         <p>
-          本应用是一款专注本地播放体验的音乐播放器。它不会提供在线曲库或云端同步功能，仅用于管理和播放保存在您设备上的音频文件。
+          The ways we collect personal data about you and why we do so
+          How we use your personal data, and
+          The choices you have about your personal data.。
         </p>
       </section>
 
