--- a/index.html
+++ b/index.html
@@ -49,21 +49,32 @@
     </header>
     <main>
       <section>
-        <h2>1. This Privacy Policy describes</h2>
+        <h2>This Privacy Policy describes</h2>
         <p>
-          The ways we collect personal data about you and why we do so
-          How we use your personal data, and
-          The choices you have about your personal data.。
+          <li>The ways we collect personal data about you and why we do so</li>
+          <li>How we use your personal data, and</li>
+          <li>The choices you have about your personal data.</li>
+
+          This Privacy Policy applies to e applications, games, websites and related services,
+          which we here collectively call the Service. We may periodically update this Privacy Policy
+          by posting a new version on e.com. If we make any material changes, we will notify you by 
+          posting a notice in the Service prior to the change becoming effective. Your continued use of 
+          the Service after the effective date will be subject to the new Privacy Policy.
+          
         </p>
       </section>
 
       <section>
-        <h2>2. 数据收集与使用</h2>
-        <ul>
-          <li>应用不会主动收集、存储或上传您的任何个人身份信息。</li>
-          <li>应用仅访问您主动授权的本地文件夹，用于读取音乐文件的必要元数据（如曲目名、时长、专辑封面）。</li>
-          <li>播放记录、播放列表等数据全部储存在本地设备上，不会上传至服务器。</li>
-        </ul>
+        <h2>CONTACT US</h2>
+        If you have questions about data protection, or if you have any requests for resolving issues with
+        your personal data, we encourage you to primarily contact us through the game so we can reply to you more quickly.
+
+        Google Drive.
+       <li>Only after your agreen, we will use google drive to download the files of your and save them to the app.</li>
+       <li>App’s use and transfer to any other app of information received from Google APIs will adhere to Google API Services 
+         User Data Policy, including the Limited Use requirements.</li>
+       <li>Google API Services User Data Policy</li>
+        
       </section>
 
       <section>
