--- a/index.html
+++ b/index.html
@@ -149,20 +149,35 @@
       </section>
 
       <section>
-        <h2>8. 联系方式</h2>
-        <p>如有隐私或安全问题，可发送邮件至：privacy@example.com</p>
+        <h2>To show personalized advertisements.</h2>
+        <p>To show you personalized and relevant advertisements in the Service as well as in other websites and services (including email) we have a legitimate interest to process necessary data to</p>
+
+          <ul>
+        <li>Track the content you access in connection with the Service and your online behavior </li>
+        <li>Deliver, target and improve our advertising and the Service </li>
+          </ul>
+        
       </section>
 
       <section>
-        <h2>部署提示（Vercel）</h2>
-        <ol>
-          <li>将本文件命名为 <code>index.html</code> 并放入项目根目录。</li>
-          <li>在 Vercel 新建项目并连接仓库，构建命令留空，输出目录留空。</li>
-          <li>部署完成后即可通过 Vercel 提供的域名访问。</li>
-        </ol>
+        <h2>To keep the Service safe and fair.</h2>
+        <p>Ensuring a level playing field in the Service is a top priority for us. For more information on our acceptable use policy, see the e Terms of Service.
+In order to keep the Service and its social features safe and fair, to fight fraud and ensure acceptable use otherwise, we have a legitimate interest to process necessary data to</p>
+       <ul>
+        <li>Analyze and monitor use of the Service and its social features  </li>
+        <li>Moderate chats either automatically or manually </li>
+        <li>Take action against fraudulent or misbehaving players </li>
+        </ul>
+      
       </section>
+
+      <section>
+        <h2>Contact Email</h2>
+        <p>If you have any privacy or security concerns, you can send an email to：CloudPlayer2026Song@gmail.com</p>
+      </section>
+
     </main>
-    <footer>© 2025 本地音乐播放器</footer>
+    <footer>© 2025 Cloud Player</footer>
   </body>
 </html>
 
