--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ In order to keep the Service and its social features safe and fair, to fight fra
 
       <section>
         <h2>Contact Email</h2>
-        <p>If you have any privacy or security concerns, you can send an email to：CloudPlayer2026Song@gmail.com</p>
+        <p>If you have any privacy or security concerns, you can send an email to：cloudplayer2026song@gmail.com</p>
       </section>
 
     </main>
