--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         If you have questions about data protection, or if you have any requests for resolving issues with
         your personal data, we encourage you to primarily contact us through the game so we can reply to you more quickly.
 
-        Google Drive.
+         <p style="color: red">Google Drive. </p>
         
          <ul>
          <li>Only after your agreen, we will use google drive to download the files of your and save them to the app.</li>
