--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
         If you have questions about data protection, or if you have any requests for resolving issues with
         your personal data, we encourage you to primarily contact us through the game so we can reply to you more quickly.
 
-         Google Drive. 
-        <p style="color: red;">Google Drive.</p>
+         <p style="color: red;">Google Drive.</p>
         
          <ul>
-         <li>Only after your agreen, we will use google drive to download the files of your and save them to the app.</li>
-         <li>App’s use and transfer to any other app of information received from Google APIs will adhere to Google API Services User Data Policy, including the Limited Use requirements.</li>
+         <li style="color: red;">Only after your agreen, we will use google drive to download the files of your and save them to the app.</li>
+         <li style="color: red;">App’s use and transfer to any other app of information received from Google APIs will adhere to Google API Services User Data Policy, including the Limited Use requirements.</li>
          <li>Google API Services User Data Policy</li>
          </ul>
         
