--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
          <ul>
          <li style="color: red;">Only after your agreen, we will use google drive to download the files of your and save them to the app.</li>
          <li style="color: red;">App’s use and transfer to any other app of information received from Google APIs will adhere to Google API Services User Data Policy, including the Limited Use requirements.</li>
-         <li>Google API Services User Data Policy</li>
+         <li><a href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data Policy</a></li>
+           
          </ul>
         
       </section>
