--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
          <li style="color: red;">App’s use and transfer to any other app of information received from Google APIs will adhere to Google API Services User Data Policy, including the Limited Use requirements.</li>
          <li style="color: red;">Depending on business needs, we may display your personal information, such as your profile picture and email address, after you log in. We will store your personal information for a period of time until your login credentials expire or you log out. Your personal information will also be deleted when you delete the app.</li>
          <li style="color: red;">We have taken security measures to protect the confidentiality of your data. Our database is stored in the app sandbox using encryption algorithms to ensure that user data cannot be accessed by others.</li>
-         <li><a href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data Policy</a></li>
+         <li style="color: red;">We only display your Google information in our app; we will not transfer or disclose your information to any third party.</li>
+          <li><a href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data Policy</a></li>
          </ul>
         
       </section>
